feat: Integrate SoundCloud audio player
Adds an iframe-based SoundCloud audio player to the application. The player is initialized using the SoundCloud Widget API and configured to loop. Playback is now controlled programmatically based on user interaction, allowing for a smoother experience and better mobile compatibility. The audio player is rendered at the top level and persists across view changes.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raven Gaming (RG)</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://w.soundcloud.com/player/api.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
       body {
