--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://w.soundcloud.com/player/api.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
+      html {
+        overflow-y: scroll; /* 스크롤바 트랙을 항상 표시하여 레이아웃 흔들림 방지 */
+      }
       body {
         font-family: 'Noto Sans KR', sans-serif;
         background-color: #050505;
@@ -34,6 +37,38 @@
         -webkit-backdrop-filter: blur(12px);
         border: 1px solid rgba(255, 255, 255, 0.08);
       }
+
+      /* Animation Utilities (Polyfill for tailwindcss-animate) */
+      @keyframes enter {
+        from {
+          opacity: var(--tw-enter-opacity, 1);
+          transform: translate3d(var(--tw-enter-translate-x, 0), var(--tw-enter-translate-y, 0), 0) scale3d(var(--tw-enter-scale, 1), var(--tw-enter-scale, 1), 1) rotate(var(--tw-enter-rotate, 0));
+        }
+      }
+
+      .animate-in {
+        animation: enter 0.15s ease-out;
+        animation-fill-mode: both;
+        --tw-enter-opacity: 1;
+        --tw-enter-translate-x: 0;
+        --tw-enter-translate-y: 0;
+        --tw-enter-scale: 1;
+        --tw-enter-rotate: 0;
+      }
+
+      .fade-in { --tw-enter-opacity: 0; }
+      .slide-in-from-bottom-4 { --tw-enter-translate-y: 1rem; }
+      .slide-in-from-bottom-8 { --tw-enter-translate-y: 2rem; }
+      .slide-in-from-top-8 { --tw-enter-translate-y: -2rem; }
+      .slide-in-from-right { --tw-enter-translate-x: 100%; }
+      .zoom-in-95 { --tw-enter-scale: 0.95; }
+
+      .duration-300 { animation-duration: 300ms; }
+      .duration-500 { animation-duration: 500ms; }
+      .duration-1000 { animation-duration: 1000ms; }
+
+      .delay-150 { animation-delay: 150ms; }
+      .delay-300 { animation-delay: 300ms; }
     </style>
   <script type="importmap">
 {
@@ -43,7 +78,8 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4"
   }
 }
 </script>
